# royal-game-of-ur

./: .editorconfig  .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  Justfile  README.md  SPEC.md  rustfmt.toml
docs/superpowers/plans/: 2026-04-13-scaffold.md  2026-04-13-ur-cli.md  2026-04-13-ur-core-implementation.md  2026-04-16-prominent-dice-roll.md  2026-04-17-ui-revamp.md
docs/superpowers/specs/: 2026-04-13-cli-frontend-decision.md  2026-04-13-scaffold-design.md  2026-04-13-ur-cli-design.md  2026-04-16-prominent-dice-roll-design.md  2026-04-17-ui-revamp-design.md
ur-cli/: Cargo.toml
ur-cli/src/: animation.rs  app.rs  input.rs  main.rs
ur-cli/src/app/: gameplay.rs  handlers.rs  mod.rs  navigation.rs
ur-cli/src/ui/: game.rs  gameover.rs  help.rs  menu.rs  mod.rs  pause.rs  styled_box.rs  theme.rs  title.rs
ur-core/: Cargo.toml
ur-core/src/: ai.rs  board.rs  dice.rs  lib.rs  player.rs  state.rs
ur-core/tests/: simulation.rs
